[gd_scene load_steps=5 format=3 uid="uid://c3mce4ftycl43"]

[ext_resource type="Script" path="res://menu.gd" id="1_gt6no"]
[ext_resource type="AudioStream" uid="uid://f0bmcdyh2s0q" path="res://neon-gaming-128925.mp3" id="2_w2asd"]
[ext_resource type="Texture2D" uid="uid://b6w52iqutkt8t" path="res://Backgrounds/Menu Background.jpg" id="2_yr070"]
[ext_resource type="LabelSettings" uid="uid://ro4e4apxbpuu" path="res://BlackOutline.tres" id="3_srtqb"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gt6no")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1000.0
offset_bottom = 563.0
scale = Vector2(1.16, 1.16)
texture = ExtResource("2_yr070")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 369.0
offset_top = 16.0
offset_right = 484.0
offset_bottom = 42.0
scale = Vector2(3.56, 3.56)
text = "Power Breaker"
label_settings = ExtResource("3_srtqb")

[node name="Instructions" type="Button" parent="."]
layout_mode = 0
offset_left = 501.0
offset_top = 262.0
offset_right = 570.0
offset_bottom = 293.0
scale = Vector2(2.12, 2.12)
text = "Tutorial"

[node name="Level 1" type="Button" parent="."]
layout_mode = 0
offset_left = 58.0
offset_top = 473.0
offset_right = 127.0
offset_bottom = 504.0
scale = Vector2(2.12, 2.12)
text = "Level 1"

[node name="Level 2" type="Button" parent="."]
layout_mode = 0
offset_left = 501.0
offset_top = 473.0
offset_right = 570.0
offset_bottom = 504.0
scale = Vector2(2.12, 2.12)
text = "Level 2"

[node name="Level 3" type="Button" parent="."]
layout_mode = 0
offset_left = 941.0
offset_top = 473.0
offset_right = 1010.0
offset_bottom = 504.0
scale = Vector2(2.12, 2.12)
text = "Level 3
"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_w2asd")
autoplay = true

[connection signal="pressed" from="Instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="Level 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level 2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Level 3" to="." method="_on_level_3_pressed"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
